--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,5 @@
 DB_URI ='mongodb+srv://mohitsingh006:RadheyRadhey@cluster0.ntjrk1u.mongodb.net/TaskFlow?appName=Cluster0'
 
 JWT_SECERT = mohitsinghChaudhary
+
+URL= 'https://task-flow-one-chi.vercel.app'
