URL Problem Resolved

--- a/server/.env
+++ b/server/.env
@@ -2,4 +2,4 @@ DB_URI ='mongodb+srv://mohitsingh006:RadheyRadhey@cluster0.ntjrk1u.mongodb.net/T
 
 JWT_SECERT = mohitsinghChaudhary
 
-URL= 'https://task-flow-one-chi.vercel.app'
+CLIENT_URL= 'https://task-flow-one-chi.vercel.app'
